--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ conference:
   - {name: Neil Lawrence, url: "http://inverseprobability.com"}
   - {name: Ricardo Andrade Pacheco, url: "http://staffwww.dcs.shef.ac.uk/people/R.Andrade_Pacheco/"}
   
-  name: Gaussian Process Summer School
+  name: Gaussian Process School, Uganda
   location: University of Makerere, Kampala, Uganda
   year: 2013
   dates:
