--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,18 @@
 # Site settings
 title: Gaussian Process School Uganda, 2013
-email: your-email@domain.com
+email: 
 description: > # this means to ignore newlines until "baseurl:"
   The 2013 Gaussian Process School held at the University of Makerere
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "/gprs13/" # the subpath of your site, e.g. /blog/
 url: "http://gpss.cc" # the base hostname & protocol for your site
 twitter_username: datascienceshef
 github_username:  SheffieldML
+facebook_page: gaussianprocesssummerschool
 
 youtube:
   height: 315
   width: 560
+
 conference:
   hosts:
   - {name: John Quinn, url: "http://cit.mak.ac.ug/staff/jquinn/"}
@@ -21,11 +23,13 @@ conference:
   
   name: Gaussian Process School, Uganda
   location: University of Makerere, Kampala, Uganda
+  month: August
   year: 2013
   dates:
   - {date: 6, day: Tuesday, month: August, year: 2013}
   - {date: 7, day: Wednesday, month: August, year: 2013}
-  - {date: 9, day: Thursday, month: August, year: 2013}
+  - {date: 8, day: Thursday, month: August, year: 2013}
+  - {date: 9, day: Friday, month: August, year: 2013}
   
 # Build settings
 markdown: kramdown
