Update gprs13 webpage for Ricardo

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ conference:
   - {name: Martin Mubangizi, url: "http://cit.mak.ac.ug/cs/aigroup/mmubangizi/"}
   organizers:
   - {name: Neil Lawrence, url: "http://inverseprobability.com"}
-  - {name: Ricardo Andrade Pacheco, url: "http://staffwww.dcs.shef.ac.uk/people/R.Andrade_Pacheco/"}
+  - {name: Ricardo Andrade Pacheco, url: "http://ric70x7.github.io"}
   
   name: Gaussian Process School, Uganda
   location: University of Makerere, Kampala, Uganda
