--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,18 @@
 # Site settings
-title: Gaussian Process School Uganda, 2013
-email: 
+title: Gaussian Process School Uganda
+year: 2013
+email: info@datascienceafrica.org
 description: > # this means to ignore newlines until "baseurl:"
   The 2013 Gaussian Process School held at the University of Makerere
-baseurl: "/gprs13/" # the subpath of your site, e.g. /blog/
-url: "http://gpss.cc" # the base hostname & protocol for your site
-twitter_username: datascienceshef
-github_username:  SheffieldML
-facebook_page: gaussianprocesssummerschool
-analytics:
-  google:
-    tracking_id: UA-62991754-1
+baseurl: "/gpss2013/" # the subpath of your site, e.g. /blog/
+url: "http://www.datascienceafrica.org" # the base hostname & protocol for your site
+twitter_username: datsciAfrica
+logo_url: img/logo.png
+github_username:  datsciafrica
 
-youtube:
-  height: 315
-  width: 560
 
-conference:
+
+school:
   hosts:
   - {name: John Quinn, url: "http://cit.mak.ac.ug/staff/jquinn/"}
   - {name: Martin Mubangizi, url: "http://cit.mak.ac.ug/cs/aigroup/mmubangizi/"}
@@ -32,10 +28,17 @@ conference:
   year: 2013
   schoolphoto: gps_uganda.jpg
   dates:
-  - {date: 6, day: Tuesday, month: August, year: 2013}
-  - {date: 7, day: Wednesday, month: August, year: 2013}
-  - {date: 8, day: Thursday, month: August, year: 2013}
-  - {date: 9, day: Friday, month: August, year: 2013}
-  
+  - 2013-08-06
+  - 2013-08-07
+  - 2013-08-09
 # Build settings
 markdown: kramdown
+
+analytics:
+  google:
+    tracking_id: 
+
+video:
+  height: 315
+  width: 560
+
