--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Site settings
 title: Gaussian Process School Uganda
 year: 2013
+banner: Kampala_26.08.2009_13-00-45.jpg
 email: info@datascienceafrica.org
 description: > # this means to ignore newlines until "baseurl:"
   The 2013 Gaussian Process School held at the University of Makerere
